tests/fixtures/invalid/round_set_bytes.py
# Cannot call round() with Set[int], Bytes
x = round({1, 2, 3}, b"hello")
